# RustEdit

./: .gitignore  Cargo.toml  LICENSE  README.md  ]  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  test.txt  vite.config.ts
src/: App.tsx  FilesContext.ts  app.rs  editor.rs  errors.rs  event.rs  gap_buffer.rs  handler.rs  index.css  lib.rs  main.rs  screen.rs  tui.rs  ui.rs
src-tauri/: Cargo.toml  tauri.conf.json
src/components/: Editor.tsx  OpenFile.tsx  TopBar.tsx
src/components/example/: Example.tsx
src/components/files/: FileTab.tsx
src/old/: main.rs
src/types/: OpenedFile.d.ts
