[package]
name = "rust-edit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.3"
crossterm = { version = "0.27.0", features = ["event-stream"] }
futures = "0.3.30"
ratatui = "0.26.2"
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = "0.7.10"
